# CoreShift-FocusD

./: Cargo.toml  README.md  coreshift_test.sh
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  IPC_PROTOCOL.md  RESOLUTION.md
libs/coreshift-core/: CHANGELOG.md  Cargo.toml  Cargo.toml.orig  README.md  STABILITY.md
libs/coreshift-core/docs/: ARCHITECTURE.md  PRELOAD_PRIMITIVES.md  TESTING.md
libs/coreshift-core/examples/: readahead_bench.rs  readahead_file.rs  spawn_ls.rs  watch_temp.rs
libs/coreshift-core/src/: android_property.rs  error.rs  fs.rs  inotify.rs  lib.rs  proc.rs  signal.rs  tests.rs  uid.rs  unix_socket.rs
libs/coreshift-core/src/io/: buffer.rs  drain.rs  mod.rs  writer.rs
libs/coreshift-core/src/log/: android.rs  mod.rs  null.rs  stderr.rs
libs/coreshift-core/src/reactor/: mod.rs
libs/coreshift-core/src/spawn/: mod.rs
libs/coreshift-core/tests/: integration_tests.rs  repo_files.rs  shutdown_signal.rs
src/: binder_source.rs  blocklist.rs  cache.rs  config.rs  daemon.rs  lib.rs  main.rs  resolver.rs  socket.rs  terminal_apps.rs
